Removed unnecessary features, fixed case-sensitivity issue, added some spacing, added custom scrollbar.

--- a/flexing.css
+++ b/flexing.css
@@ -42,6 +42,20 @@
 } /* for å calle (bruke) variabeler, bruk var(--<variabelNavn>) som verdi */
 
 /* _________________  /  _________________ */
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+
+    scrollbar-width: none; /* for firefox */
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background: transparent;
+} ::-webkit-scrollbar-thumb {
+    background-color: rgba(0,0,0,.25);
+    border-radius: 15px;
+} ::-webkit-scrollbar-thumb:hover { background-color: rgba(0,0,0,.40); }
 
 
 body {
